Apply the Nuxeo coding guidelines
MANIFEST.MF now follows the Nuxeo template: LF endings, the singleton:=true
directive instead of the singleton=true attribute, and a Nuxeo-Component
with one entry per line rather than a value wrapped in the middle of a file
name. Note the maven-jar-plugin re-serializes the manifest when packaging,
so the form inside the jar still differs, which is expected.

Two bugs came out of the review:
- the converter fallback in S3UtilsBlobProvider converted the original text
  blob again instead of the PDF it had just produced, so it could only fail
  a second time
- S3ObjectStreaming had no license header

Guidelines applied:
- Log4j2 with placeholders instead of System.out and System.err, in the
  tests too
- no catch of Exception. Where a broad catch is wanted, RuntimeException is
  used so that InterruptedException can never be swallowed
- no wildcard imports, imports ordered static, java, jakarta, org, com then
  software.amazon, and unused ones removed
- real @since versions instead of the TODO placeholders, and Javadoc that
  matches the actual parameters
- no final on local variables, explicit charsets, "...".formatted() instead
  of String.format, try-with-resources
- temporary files created through Framework rather than java.io.tmpdir, and
  the downloaded file name reduced to its base name so it cannot escape the
  temporary directory
- no trailing whitespace, lines wrapped at 120 characters except the
  @Operation annotations, which Nuxeo core leaves long as well

Also removes the two deprecation warnings, the three parameters
RFC2231.encodeContentDisposition and new URL(String).